# linac

./: .gitignore  Example.ipynb  README.md  example.py  figures.ipynb  linac.py  main.ipynb  main.py  plan.py  run.sh
example/: example.py
example/machine/: example.yaml  filter.ply  target.ply
example/macros/: vis.mac
g4/: CMakeLists.txt
g4/include/: BremSplittingProcess.hh  DetectorConstruction.hh  EventAction.hh  PhasespaceRecord.hh  PhysicsList.hh  SensitiveDetector.hh
g4/src/: BremSplittingProcess.cc  DetectorConstruction.cc  EventAction.cc  Phasespace.cc  PhasespaceRecord.cc  SteppingAction.cc  StopKillShield.cc
histograms/: counts_electron_basic_7193.npy  counts_multiTubeIssue_basic_4940.npy  counts_multiTubeIssue_basic_5375.npy  energy2_electron_basic_7193.npy  energy2_multiTubeIssue_basic_4940.npy  energy2_multiTubeIssue_basic_5375.npy  energy_electron_basic_7193.npy  energy_multiTubeIssue_basic_4940.npy  energy_multiTubeIssue_basic_5375.npy  energy_nonreal_basic_22644.npy
linac/: __init__.py  core.py  geometry.py  geometry.py~  simulation.py  simulation.py~
linac/g4/: CMakeLists.txt  __init__.py  libg4.cc  libg4.cc~
linac/g4/include/: DetectorConstruction.hh  DetectorConstruction.hh~  ParallelDetectorConstruction.hh  Phasespace.hh  PhasespaceRecord.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  SensitiveDetector.hh  SteppingAction.hh  StopKillShield.hh
linac/g4/src/: DetectorConstruction.cc  DetectorConstruction.cc~  EventAction.cc  ParallelDetectorConstruction.cc  Phasespace.cc  PhasespaceRecord.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SensitiveDetector.cc
machine/: asymmetricProblem.yaml  electron.yaml  example.yaml  example.yaml~
macros/: gui.mac  vis.mac
utils/phsp_inspector/: CMakeLists.txt  lib_phsp_inspector.cc  test.py
utils/phsp_inspector/phsp/: test1.phsp  test2.phsp
utils/phsp_inspector/phsp_inspector/: __init__.py
